<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CherryBerry</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="default_pomodoro_timer">0:00</string>
    <string name="pomodoro_finished_notification_title">Pomodoro finished</string>
    <string name="break_finished_notification_title">Break finished</string>
    <string name="pomodoro_finished_notification_content">Pomodoro finished, take a break!</string>
    <string name="break_finished_notification_content">Break finished, get back to work!</string>
    <string name="pomodoro_running_notification_title">Pomodoro started</string>
    <string name="pomodoro_running_notification_content">Pomodoro running - ends at %1$s</string>
    <string name="break_running_notification_title">Break started</string>
    <string name="break_running_notification_content">Break running - ends at %1$s</string>
    <string name="pomodoro_finished_dialog_title">Pomodoro finished. What now?</string>
    <string name="start_break_button">Start break</string>
    <string name="cancel_pomodoro_button">Cancel pomodoro</string>
    <string name="skip_break_button">Skip break</string>
    <string name="status_idle">Ready to start the next pomodoro?</string>
    <string name="status_pomodoro_running">On a pomodoro. Focus on your work!</string>
    <string name="status_pomodoro_finished">Time to get a break</string>
    <string name="status_break_running">On a break. Relax!</string>
    <string name="menu_about">About</string>
    <string name="about_dialog_title">About CherryBerry</string>
    <string name="about_dialog_content">CherryBerry is a really simple Pomodoro timer.\n\nBy Alberto Salmerón Moreno</string>
    <string name="settings_category_pomodoro">Pomodoro</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notification_light">Show light</string>
    <string name="settings_key_notification_light">notification_light</string>
    <string name="settings_notification_vibration">Vibrate</string>
    <string name="settings_key_notification_vibration">notification_vibration</string>
    <string name="settings_notification_ringtone">Sound</string>
    <string name="settings_key_notification_ringtone">notification_sound</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_pomodoro_duration">Pomodoro duration</string>
    <string name="settings_key_pomodoro_duration">pomodoro_duration</string>
    <string name="settings_break_duration">Break duration</string>
    <string name="settings_key_break_duration">break_duration</string>
    <string name="in_minutes">In minutes</string>
    <string name="settings_long_break_duration">Long break duration</string>
    <string name="settings_key_long_break_duration">long_break_duration</string>
    <string name="settings_long_break_interval">Long break interval</string>
    <string name="settings_key_long_break_interval">long_break_interval</string>
    <string name="settings_long_break_interval_dialog_message">Long break after</string>
    <string-array name="settings_long_break_interval_entries">
        <item >1 pomodoro</item>
        <item >2 pomodoros</item>
        <item >3 pomodoros</item>
        <item >4 pomodoros</item>
        <item >5 pomodoros</item>
    </string-array>
    <string-array name="settings_long_break_interval_values">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
    </string-array>
    <string name="settings_summary_duration">%d minutes</string>

</resources>