<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/settings_category_pomodoro">
        <EditTextPreference android:key="pomodoro_duration" android:dialogMessage="@string/in_minutes" android:title="@string/settings_pomodoro_duration" android:numeric="" />
        <EditTextPreference android:key="break_duration" android:title="@string/settings_break_duration" android:numeric="" android:dialogMessage="@string/in_minutes"/>        
        <EditTextPreference android:key="long_break_duration" android:dialogMessage="@string/in_minutes" android:title="@string/settings_long_break_duration"/>
        <ListPreference android:dialogMessage="@string/settings_long_break_interval_dialog_message" android:title="@string/settings_long_break_interval" android:key="long_break_interval" android:entries="@array/settings_long_break_interval_entries" android:entryValues="@array/settings_long_break_interval_values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_notifications">
        <CheckBoxPreference android:title="@string/settings_notification_light" android:key="notification_light"/>
        <CheckBoxPreference android:title="@string/settings_notification_vibration" android:key="notification_vibration"/>
        <RingtonePreference android:key="notification_ringtone" android:showSilent="true" android:ringtoneType="notification" android:title="@string/settings_notification_ringtone"/>
    </PreferenceCategory>
    
</PreferenceScreen>